refactor(case): rename assignee to assignees and change type to array
