# backend/controllers/caseController.js
@@ -124,11 +124,11 @@ exports.createCase = [
 
   async (req, res) => {
     try {
-      const {
+      let {
         title,
         description,
         solution,
-        assignee,
+        assignees,
         status,
         case_type,
         priority,
@@ -138,12 +138,17 @@ exports.createCase = [
       const attachmentInstances =
         await attachmentService.uploadFilesAndCreateAttachments(req.files);
 
+      // Split assignees string into an array.
+      if (typeof assignees === "string") {
+        assignees = assignees.split(",");
+      }
+
       // Create a new case record in the database.
       const newCase = await Cases.create({
         title,
         description,
         solution,
-        assignee,
+        assignees,
         status,
         case_type,
         priority,
@@ -197,18 +202,25 @@ exports.updateCase = [
         "title",
         "description",
         "solution",
-        "assignee",
+        "assignees",
         "status",
         "case_type",
         "priority",
         "draft",
       ];
 
+      console.log("req.body", req.body);
       // Extract only allowed fields from the request body
       const updateData = {};
       allowedFields.forEach((field) => {
-        if (req.body[field] !== undefined) {
-          updateData[field] = req.body[field];
+        const value = req.body[field];
+        if (value !== undefined) {
+          if (field === "assignees" && typeof value === "string") {
+            // Convert assignees to an array if it is a string
+            updateData[field] = req.body[field].split(",");
+          } else {
+            updateData[field] = req.body[field];
+          }
         }
       });
 
@@ -303,7 +315,7 @@ exports.createCaseFromFiles = [
             description: caseData.description,
             solution: caseData.solution,
             status: caseData.status,
-            assignee: caseData.assignee,
+            assignees: caseData.assignees,
             case_type: caseData.case_type,
             priority: caseData.priority,
             draft: true,
@@ -409,7 +421,7 @@ exports.confirmCase = [
         "title",
         "description",
         "solution",
-        "assignee",
+        "assignees",
         "status",
         "case_type",
         "priority",
@@ -418,8 +430,14 @@ exports.confirmCase = [
       // Extract only allowed fields from the request body.
       const updateData = {};
       allowedFields.forEach((field) => {
-        if (req.body[field] !== undefined) {
-          updateData[field] = req.body[field];
+        const value = req.body[field];
+        if (value !== undefined) {
+          if (field === "assignees" && typeof value === "string") {
+            // Convert assignees to an array if it is a string
+            updateData[field] = req.body[field].split(",");
+          } else {
+            updateData[field] = req.body[field];
+          }
         }
       });
 
