# frontend/src/api/OpenAPI.yaml
@@ -740,7 +740,7 @@ components:
 
     CaseBase:
       type: object
-      required: [title, description]
+      required: [title, description, assignees]
       properties:
         title:
           type: string
@@ -751,7 +751,7 @@ components:
         solution:
           type: string
           description: Solution for the case.
-        assignee:
+        assignees:
           type: array
           items:
             type: string
